src/styles/global.css
@import "tailwindcss";

@font-face {
  font-family: "Redaction";
  src: url("/Redaction-Bold.woff2") format("woff2");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Alte Haas Grotesk";
  src: url("/AlteHaasGroteskRegular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Alte Haas Grotesk";
  src: url("/AlteHaasGroteskBold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Prata";
  src: url("/Prata-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

.Redaction {
  font-family: "Redaction", Times, serif;
}

.Alte {
  font-family: "Alte Haas Grotesk", system-ui, sans-serif;
}

.variableSize {
  font-size: clamp(1rem, 2vw + 1rem, 2.25rem);
}

